Prespark2 (#1124)
* Towards Spark 2 support.

Upgraded to Kudu 1.1.0.

* More changes to prepare for spark2.

HailContext creates SparkContext.
Addded jnone, jsome and joption to pyhail.java.
Removed SparkExport.  Added partitionPath using reflection.

* Removed SparkManager.

* Addressed comments.

Switched to Spark 2.
Added spark1.patch for building against Spark 1.

* Updated spark1.patch.

* Include kudu dependencies.

* Removed print statement.

* Get kudu-spark2_2.11 from our own repo.

* Use py4jVersion in makePyHailDocs.

* Parameterize kudu dependency.

* Set py4j version for Spark 1.5 vs 1.6.

* Back out incorrect change.

* Updated spark1.patch.

* Add back Cloudera repo for testing against CDH.

* Remove rogue print statement.