@@ -19,6 +19,11 @@ plugins {
 import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar
 
 repositories {
+    // Get kudu-spark2_2.11 with custom pom from our repo since we can't
+    // figure out how to enable spark2_2.11 profile in standard pom.
+    maven {
+        url 'https://storage.googleapis.com/hail-common/maven-repo'
+    }
     mavenCentral()
     jcenter()
     maven {
@@ -33,11 +38,31 @@ buildScan {
 
 mainClassName = "org.broadinstitute.hail.driver.Main"
 
-String scalaVersion = '2.10.4'
-String scalaMajorVersion = '2.10'
-String sparkVersion = System.getProperty("spark.version","1.6.2")
-// String scalaVersion = '2.11.7'
-// String scalaMajorVersion = '2.11'
+String sparkVersion = System.getProperty("spark.version","2.0.2")
+
+Boolean spark2 = sparkVersion ==~ /^2.*/
+
+String kuduSpark
+String scalaVersion
+String scalaMajorVersion
+String py4jVersion
+String breezeVersion = '0.11.2'
+
+if (spark2) {
+    kuduSpark = 'spark2'
+    scalaVersion = '2.11.8'
+    scalaMajorVersion = '2.11'
+    py4jVersion = '0.10.3'
+} else {
+    scalaVersion = '2.10.4'
+    scalaMajorVersion = '2.10'
+    kuduSpark = 'spark'
+    if (sparkVersion ==~ /^1\.5.*/) {
+        py4jVersion = '0.8.2.1'
+    } else {
+        py4jVersion = '0.9' // 1.6
+    }
+}
 
 sourceSets.main.scala.srcDir "src/main/java"
 sourceSets.main.java.srcDirs = []
@@ -47,16 +72,21 @@ compileJava {
 }
 
 compileScala {
-    // scalaCompileOptions.compilerArgs << "-Xfatal-warnings"
-    scalaCompileOptions.additionalParameters = ["-feature", "-Xfatal-warnings"]
-    // scalaCompileOptions.forkOptions.jvmArgs = ['-XX:MaxPermSize=512m']
+    if (spark2)
+        // until we drop Spark 1 support, we need to rely on deprecated features
+        scalaCompileOptions.additionalParameters = ["-feature"]
+    else
+        scalaCompileOptions.additionalParameters = ["-feature", "-Xfatal-warnings"]
 }
 
-configurations.all {
-    resolutionStrategy {
-        // override new version pulled in by solrj
-        // http://stackoverflow.com/questions/31039367/spark-parallelize-could-not-find-creator-property-with-name-id
-        force 'com.fasterxml.jackson.core:jackson-databind:2.4.4'
+if (!spark2) {
+    configurations.all {
+        resolutionStrategy {
+            // override new version pulled in by solrj
+            // http://stackoverflow.com/questions/31039367/spark-parallelize-could-not-find-creator-property-with-name-id
+
+            force 'com.fasterxml.jackson.core:jackson-databind:2.4.4'
+        }
     }
 }
 
@@ -72,12 +102,11 @@ dependencies {
     compile 'org.apache.spark:spark-sql_' + scalaMajorVersion + ':' + sparkVersion
     compile 'org.apache.spark:spark-mllib_' + scalaMajorVersion + ':' + sparkVersion
     compile 'net.jpountz.lz4:lz4:1.3.0'
-    compile 'org.scalanlp:breeze_' + scalaMajorVersion + ':0.11.2'
-    compile 'org.scalanlp:breeze-natives_' + scalaMajorVersion + ':0.11.2'
+    compile 'org.scalanlp:breeze-natives_' + scalaMajorVersion + ':' + breezeVersion
     compile 'args4j:args4j:2.32'
     compile 'com.github.samtools:htsjdk:2.5.0'
-    compile 'org.kududb:kudu-client:0.9.0'
-    compile 'org.kududb:kudu-spark_' + scalaMajorVersion + ':0.9.0'
+    compile 'org.apache.kudu:kudu-client:1.1.0'
+    compile 'org.apache.kudu:kudu-' + kuduSpark + '_' + scalaMajorVersion + ':1.1.0'
 
     compile 'org.http4s:http4s-core_' + scalaMajorVersion + ':0.12.3'
     compile 'org.http4s:http4s-server_' + scalaMajorVersion + ':0.12.3'
@@ -148,7 +177,7 @@ task testPyHail(type: Exec, dependsOn: shadowJar) {
      commandLine 'python', '-m', 'unittest', 'pyhail.tests'
 
      environment SPARK_HOME: sparkHome
-     environment PYTHONPATH: '' + projectDir + '/python:' + sparkHome + '/python:' + sparkHome + '/python/lib/py4j-0.9-src.zip'
+     environment PYTHONPATH: '' + projectDir + '/python:' + sparkHome + '/python:' + sparkHome + '/python/lib/py4j-' + py4jVersion + '-src.zip'
      environment SPARK_CLASSPATH: '' + projectDir + '/build/libs/hail-all-spark.jar'
 }
 
@@ -186,6 +215,9 @@ shadowJar {
 
         include(dependency('org.http4s:http4s-core_' + scalaMajorVersion + ':.*'))
 
+        include(dependency('org.apache.kudu:kudu-client:.*'))
+        include(dependency('org.apache.kudu:kudu-' + kuduSpark + '_' + scalaMajorVersion + ':.*'))
+
         // solr dependencies
         include(dependency('org.apache.solr:solr-solrj:.*'))
         include(dependency('org.apache.httpcomponents:httpclient:.*'))
@@ -198,8 +230,8 @@ shadowJar {
 
         include(dependency('com.datastax.cassandra:cassandra-driver-core:.*'))
         include(dependency('com.google.guava:guava:.*'))
-        include(dependency('org.kududb:kudu-client:.*'))
-        include(dependency('org.kududb:kudu-spark_' + scalaMajorVersion + ':.*'))
+        include(dependency('org.apache.spark:kudu-client:.*'))
+        include(dependency('org.apache.spark:kudu-spark_' + scalaMajorVersion + ':.*'))
 
         include(dependency('org.ow2.asm:asm:.*'))
         include(dependency('org.ow2.asm:asm-util:.*'))
@@ -227,7 +259,10 @@ task shadowTestJar(type: ShadowJar) {
         include(dependency('org.scalaz:scalaz-core_' + scalaMajorVersion + ':.*'))
         include(dependency('org.scalaz:scalaz-concurrent_' + scalaMajorVersion + ':.*'))
         include(dependency('org.scalaz:scalaz-stream_' + scalaMajorVersion + ':.*'))
-	
+
+        include(dependency('org.apache.kudu:kudu-client:.*'))
+        include(dependency('org.apache.kudu:kudu-' + kuduSpark + '_' + scalaMajorVersion + ':.*'))
+
         // solr dependencies
         include(dependency('org.apache.solr:solr-solrj:.*'))
         include(dependency('org.apache.httpcomponents:httpclient:.*'))
@@ -240,9 +275,9 @@ task shadowTestJar(type: ShadowJar) {
 
         include(dependency('com.datastax.cassandra:cassandra-driver-core:.*'))
         include(dependency('com.google.guava:guava:.*'))
-        include(dependency('org.kududb:kudu-client:.*'))
-        include(dependency('org.kududb:kudu-spark_' + scalaMajorVersion + ':.*'))
-	
+        include(dependency('org.apache.spark:kudu-client:.*'))
+        include(dependency('org.apache.spark:kudu-spark_' + scalaMajorVersion + ':.*'))
+
         include(dependency('org.ow2.asm:asm:.*'))
         include(dependency('org.ow2.asm:asm-util:.*'))
         include(dependency('org.ow2.asm:asm-tree:.*'))
@@ -355,7 +390,7 @@ task makePyHailDocs(type: Exec) {
 
      commandLine 'make', 'html'
 
-     environment PYTHONPATH: '' + projectDir + '/python:' + sparkHome + '/python:' + sparkHome + '/python/lib/py4j-0.9-src.zip'
+     environment PYTHONPATH: '' + projectDir + '/python:' + sparkHome + '/python:' + sparkHome + '/python/lib/py4j-' + py4jVersion + '-src.zip'
 }
 
 task copyPyHailDocs(type: Exec, dependsOn: ['makePyHailDocs', 'setupDocsDirs']) {
